[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/snake.gd" type="Script" id=1]
[ext_resource path="res://scene/Body2.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Prey.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/score.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/scoreboard.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/nokiafc22.ttf"

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.0
margin_top = -42.0
margin_right = 41.0
margin_bottom = -1.0
custom_styles/panel = SubResource( 1 )

[node name="Snake" type="Node2D" parent="Panel"]
position = Vector2( -1, -6 )

[node name="Head" parent="Panel/Snake" instance=ExtResource( 3 )]

[node name="Body" parent="Panel/Snake" instance=ExtResource( 2 )]

[node name="Prey" parent="Panel" instance=ExtResource( 4 )]
position = Vector2( -1, -6 )

[node name="ColorRect2" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 41.0
margin_right = 1.0
margin_bottom = 1.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )

[node name="ColorRect5" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -6.0
margin_right = 1.0
margin_bottom = -41.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )

[node name="ColorRect3" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.0
margin_right = 1.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )

[node name="ColorRect4" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -82.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )

[node name="Score" type="Label" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 26.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0000"

[node name="GameOver" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 84.0
margin_bottom = 48.0
alignment = 1

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 12.0
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 6 )
text = "Game Over!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )
text = "Score:"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_collision" from="Panel/Snake/Body" to="." method="_on_Body_body_collision"]
[connection signal="prey_eaten" from="Panel/Prey" to="." method="_on_Prey_prey_eaten"]
