[gd_scene load_steps=8 format=2]

[ext_resource path="res://Body2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prey.tscn" type="PackedScene" id=2]
[ext_resource path="res://Body.tscn" type="PackedScene" id=3]
[ext_resource path="res://snake.gd" type="Script" id=4]
[ext_resource path="res://Area2D.gd" type="Script" id=5]
[ext_resource path="res://head.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 1.5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head2" type="KinematicBody2D" parent="."]
position = Vector2( 47, 13 )
rotation = -1.5708

[node name="Head" type="TextureRect" parent="Head2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = 3.0
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head2"]
position = Vector2( 3, 1.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Head2"]
script = ExtResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Head2/Area2D"]
position = Vector2( 3, 1.5 )
shape = SubResource( 2 )

[node name="Body3" parent="." instance=ExtResource( 3 )]
position = Vector2( 39, 16 )

[node name="Body2" parent="." instance=ExtResource( 3 )]
position = Vector2( 44, 18 )
rotation = -1.5708

[node name="Snake" type="Node2D" parent="."]

[node name="Head" type="KinematicBody2D" parent="Snake"]

[node name="Head" type="TextureRect" parent="Snake/Head"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = 3.0
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake/Head"]
position = Vector2( 3, 1.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Snake/Head"]
script = ExtResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Snake/Head/Area2D"]
position = Vector2( 3, 1.5 )
shape = SubResource( 2 )

[node name="Body" parent="Snake" instance=ExtResource( 3 )]

[node name="Node2D" parent="Snake" instance=ExtResource( 1 )]
position = Vector2( 15, 4 )

[node name="Prey" parent="." instance=ExtResource( 2 )]

[connection signal="prey_eaten" from="Prey" to="." method="_on_Prey_prey_eaten"]
